--- a/university_deadlines.html
+++ b/university_deadlines.html
@@ -278,7 +278,7 @@
                 <div class="container">
                     <div class="row m-3">
                         <div class="col-3">
-                            <div class="card h-100" id="fgrey">
+                            <div class="card h-100" id="fcard">
                               <div class="card-body text-center">
                                 <strong>UNIVERSITY INFORMATION</strong>
                                 <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
@@ -293,7 +293,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="card h-100" id="fgrey">
+                            <div class="card h-100" id="fcard">
                               <div class="card-body text-center">
                                 <strong>EXPLORE YOCKET</strong>
                                 <ul class="card-text list-unstyled">
@@ -307,7 +307,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="card h-100" id="fgrey">
+                            <div class="card h-100" id="fcard">
                               <div class="card-body text-center">
                                 <strong>SERVICES</strong>
                                 <ul class="card-text list-unstyled">
@@ -321,7 +321,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="card h-100" id="fgrey">
+                            <div class="card h-100" id="fcard">
                               <div class="card-body text-center">
                                 <strong>MORE</strong>
                                 <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
