--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/custom.css">      
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -424,93 +426,91 @@
 		</div>
 	</div>	
 </div>
-<footer class="container-fluid bg-secondary">
-    <div class="row bg-secondary">
+        <footer class="container-fluid mt-5" id="fgrey">
+                <div class="row fgrey">
 
-    </div>
-    <div class="row m-3 justify-content-center">
-        <div class="col">
-            <div class="float-right">
-                Looking for help?
-            </div>	
-        </div>
-        <div class="col pl-0">
-            <button type="button" class="btn btn-sm rounded btn-primary">CONTACT US</button>
-        </div>	
-    </div>
-    <div class="container">
-        <div class="row m-3">
-            <div class="col-3">
-                <div class="card h-100 bg-secondary border-secondary">
-                  <div class="card-body text-center">
-                    <strong>UNIVERSITY INFORMATION</strong>
-                    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
-                    <ul class="card-text list-unstyled">
-                        <li>University Reviews</li>
-                        <li>Profile evaluator</li>
-                        <li>Compare universities</li>
-                        <li>Application Deadlines</li>
-                        <li>Course Descriptions</li>
-                    </ul>
-                  </div>
                 </div>
-            </div>
-            <div class="col-3">
-                <div class="card h-100 bg-secondary border-secondary">
-                  <div class="card-body text-center">
-                    <strong>EXPLORE YOCKET</strong>
-                    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
-                    <ul class="card-text list-unstyled">
-                        <li>Similar profiles</li>
-                        <li>Admits and rejects</li>
-                        <li>Roommate finder</li>
-                        <li>Discussions</li>
-                        <li>Read Articles</li>
-                    </ul>
-                  </div>
+                <div class="row m-3 justify-content-center">
+                    <div class="col">
+                        <div class="float-right">
+                            Looking for help?
+                        </div>	
+                    </div>
+                    <div class="col pl-0">
+                        <button type="button" class="btn btn-sm rounded btn-primary">CONTACT US</button>
+                    </div>	
                 </div>
-            </div>
-            <div class="col-3">
-                <div class="card h-100 bg-secondary border-secondary">
-                  <div class="card-body text-center">
-                    <strong>SERVICES</strong>
-                    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
-                    <ul class="card-text list-unstyled">
-                        <li>Send transcripts</li>
-                        <li>Education Loans</li>
-                        <li>Forex Card</li>
-                        <li>University fee payment</li>
-                        <li>Health/Travel Insurance</li>
-                    </ul>
-                  </div>
+                <div class="container">
+                    <div class="row m-3">
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>UNIVERSITY INFORMATION</strong>
+                                <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+                                <ul class="card-text list-unstyled">
+                                    <li>University Reviews</li>
+                                    <li>Profile evaluator</li>
+                                    <li>Compare universities</li>
+                                    <li>Application Deadlines</li>
+                                    <li>Course Descriptions</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>EXPLORE YOCKET</strong>
+                                <ul class="card-text list-unstyled">
+                                    <li>Similar profiles</li>
+                                    <li>Admits and rejects</li>
+                                    <li>Roommate finder</li>
+                                    <li>Discussions</li>
+                                    <li>Read Articles</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>SERVICES</strong>
+                                <ul class="card-text list-unstyled">
+                                    <li>Send transcripts</li>
+                                    <li>Education Loans</li>
+                                    <li>Forex Card</li>
+                                    <li>University fee payment</li>
+                                    <li>Health/Travel Insurance</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>MORE</strong>
+                                <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+                                <ul class="card-text list-unstyled">
+                                    <li>Contact us | Work with us</li>
+                                    <li>Facebook | Twitter</li>
+                                    <li>About Us</li>
+                                    <li>Campus Ambassador</li>
+                                    <li>Privacy | Terms</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-3">
-                <div class="card h-100 bg-secondary border-secondary">
-                  <div class="card-body text-center">
-                    <strong>MORE</strong>
-                    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
-                    <ul class="card-text list-unstyled">
-                        <li>Contact us | Work with us</li>
-                        <li>Facebook | Twitter</li>
-                        <li>About Us</li>
-                        <li>Campus Ambassador</li>
-                        <li>Privacy | Terms</li>
-                    </ul>
-                  </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-center">
-        <div class="col-auto">
-            <select class="form-control form-control-sm">
-              <option>Select language</option>
-            </select>
-            <small>Powered by Google <strong>Translate</strong></small>
-        </div>	
-    </div>	
-</footer>
+                <div class="row justify-content-center">
+                    <div class="col-auto">
+                        <select class="form-control form-control-sm">
+                          <option>Select language</option>
+                        </select>
+                        <small>Powered by Google <strong>Translate</strong></small>
+                    </div>	
+                </div>	
+        </footer>    
 <script src="js/jquery-3.3.1.slim.min.js" ></script>
 <script src="js/popper.min.js" ></script>
 <script src="js/bootstrap.js" ></script>		
