--- a/university_reviews.html
+++ b/university_reviews.html
@@ -76,10 +76,10 @@
         <div class="container-fluid pl-0 pr-0">
             <div class="card bg-dark text-white">
                 <img class="card-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/121_-_Kingston_-_Septembre_2009.jpg/1280px-121_-_Kingston_-_Septembre_2009.jpg" alt="Card image">
-                <div class="card-img-overlay border border-primary">
-                    <div class="row">
-                        <div class="col align-self-center">
-                            <div class="input-group w-50">
+                <div class="card-img-overlay">
+                    <div class="row m-5 justify-content-center">
+                        <div class="col-8">
+                            <div class="input-group">
                               <div class="input-group-prepend">
                                 <span class="input-group-text">search</span>
                               </div>
@@ -363,7 +363,7 @@
                 <div class="container">
                     <div class="row m-3">
                         <div class="col-3">
-                            <div class="card h-100" id="fgrey">
+                            <div class="card h-100" id="fcard">
                               <div class="card-body text-center">
                                 <strong>UNIVERSITY INFORMATION</strong>
                                 <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
@@ -378,7 +378,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="card h-100" id="fgrey">
+                            <div class="card h-100" id="fcard">
                               <div class="card-body text-center">
                                 <strong>EXPLORE YOCKET</strong>
                                 <ul class="card-text list-unstyled">
@@ -392,7 +392,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="card h-100" id="fgrey">
+                            <div class="card h-100" id="fcard">
                               <div class="card-body text-center">
                                 <strong>SERVICES</strong>
                                 <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
@@ -407,7 +407,7 @@
                             </div>
                         </div>
                         <div class="col-3">
-                            <div class="card h-100" id="fgrey">
+                            <div class="card h-100" id="fcard">
                               <div class="card-body text-center">
                                 <strong>MORE</strong>
                                 <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
