--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 			YOCKET SERVICES
 		</div>
 	</div>	
-	<div class="row m-3" >
+	<div class="row m-3 mb-5 border border-primary" >
 		<div class="col-3">
 			<div class="card">
 			  <div class="card-body">
@@ -426,11 +426,8 @@
 		</div>
 	</div>	
 </div>
-        <footer class="container-fluid mt-5" id="fgrey">
-                <div class="row fgrey">
-
-                </div>
-                <div class="row m-3 justify-content-center">
+        <footer class="container-fluid" id="fgrey">
+                <div class="row pt-3 justify-content-center">
                     <div class="col">
                         <div class="float-right">
                             Looking for help?
@@ -475,6 +472,7 @@
                             <div class="card h-100" id="fcard">
                               <div class="card-body text-center">
                                 <strong>SERVICES</strong>
+                                <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
                                 <ul class="card-text list-unstyled">
                                     <li>Send transcripts</li>
                                     <li>Education Loans</li>
@@ -503,7 +501,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-auto">
+                    <div class="col-auto pb-4">
                         <select class="form-control form-control-sm">
                           <option>Select language</option>
                         </select>
