--- a/university_reviews.html
+++ b/university_reviews.html
@@ -347,10 +347,7 @@
             </div>
         </div>
         <footer class="container-fluid" id="fgrey">
-                <div class="row fgrey">
-
-                </div>
-                <div class="row m-3 justify-content-center">
+                <div class="row pt-3 justify-content-center">
                     <div class="col">
                         <div class="float-right">
                             Looking for help?
@@ -424,14 +421,15 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-auto">
+                    <div class="col-auto pb-4">
                         <select class="form-control form-control-sm">
                           <option>Select language</option>
                         </select>
                         <small>Powered by Google <strong>Translate</strong></small>
                     </div>	
                 </div>	
-        </footer>
+        </footer>    
+
         <script src="js/jquery-3.3.1.slim.min.js" ></script>
 	    <script src="js/popper.min.js" ></script>
 	    <script src="js/bootstrap.js" ></script>    
