--- a/university_deadlines.html
+++ b/university_deadlines.html
@@ -262,10 +262,7 @@
             </div>
         </div>
         <footer class="container-fluid" id="fgrey">
-                <div class="row fgrey">
-
-                </div>
-                <div class="row m-3 justify-content-center">
+                <div class="row pt-3 justify-content-center">
                     <div class="col">
                         <div class="float-right">
                             Looking for help?
@@ -310,6 +307,7 @@
                             <div class="card h-100" id="fcard">
                               <div class="card-body text-center">
                                 <strong>SERVICES</strong>
+                                <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
                                 <ul class="card-text list-unstyled">
                                     <li>Send transcripts</li>
                                     <li>Education Loans</li>
@@ -338,14 +336,15 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-auto">
+                    <div class="col-auto pb-4">
                         <select class="form-control form-control-sm">
                           <option>Select language</option>
                         </select>
                         <small>Powered by Google <strong>Translate</strong></small>
                     </div>	
                 </div>	
-        </footer>
+        </footer>    
+
         <script src="js/jquery-3.3.1.slim.min.js" ></script>
 	    <script src="js/popper.min.js" ></script>
 	    <script src="js/bootstrap.js" ></script> 
