added orange links to all files except index.html

--- a/events.html
+++ b/events.html
@@ -100,7 +100,7 @@
                           </div>
                           <div class="row my-3">
                             <div class=" col">
-                                <a href=""><h3>AMA Session By Mentor Of The Month Tanmay Khare</h3></a>
+                                <a href="#" id="orange_links"><h3>AMA Session By Mentor Of The Month Tanmay Khare</h3></a>
                                 <p>Have a query pertaining to MS in US that no one solved for you? Get it resolved on Yocket discussion by Mentor of the month Tanmay Khare. Post your questions on Yocket Discussion by tagging @Tanmya...</p>
                             </div>
                           </div>
@@ -139,7 +139,7 @@
                           </div>
                           <div class="row my-3">
                             <div class=" col">
-                                <a href=""><h3>AMA Session By Mentor Of The Month Tanmay Khare</h3></a>
+                                <a href="#" id="orange_links"><h3>AMA Session By Mentor Of The Month Tanmay Khare</h3></a>
                                 <p>Have a query pertaining to MS in US that no one solved for you? Get it resolved on Yocket discussion by Mentor of the month Tanmay Khare. Post your questions on Yocket Discussion by tagging @Tanmya...</p>
                             </div>
                           </div>
@@ -178,7 +178,7 @@
                           </div>
                           <div class="row my-3">
                             <div class=" col">
-                                <a href=""><h3>AMA Session By Mentor Of The Month Tanmay Khare</h3></a>
+                                <a href="#" id="orange_links"><h3>AMA Session By Mentor Of The Month Tanmay Khare</h3></a>
                                 <p>Have a query pertaining to MS in US that no one solved for you? Get it resolved on Yocket discussion by Mentor of the month Tanmay Khare. Post your questions on Yocket Discussion by tagging @Tanmya...</p>
                             </div>
                           </div>
@@ -217,7 +217,7 @@
                           </div>
                           <div class="row my-3">
                             <div class=" col">
-                                <a href=""><h3>AMA Session By Mentor Of The Month Tanmay Khare</h3></a>
+                                <a href="#" id="orange_links"><h3>AMA Session By Mentor Of The Month Tanmay Khare</h3></a>
                                 <p>Have a query pertaining to MS in US that no one solved for you? Get it resolved on Yocket discussion by Mentor of the month Tanmay Khare. Post your questions on Yocket Discussion by tagging @Tanmya...</p>
                             </div>
                           </div>
@@ -232,7 +232,7 @@
                                 <p>Venues: <span class="badge badge-pill p-2" style="background: #009688; color:aliceblue">Yocket Discussion</span>
                             </div> 
                             <div class="col-2 align-self-end">
-                                <a href=""><button type="button" class="btn btn-sm" style="background: white;border:0.07em solid gainsboro">See Details</button></a>    
+                                <a href="#"><button type="button" class="btn btn-sm" style="background: white;border:0.07em solid gainsboro">See Details</button></a>    
                             </div>                                  
                           </div>                          
                       </div>
@@ -256,7 +256,7 @@
                           </div>
                           <div class="row my-3">
                             <div class=" col">
-                                <a href=""><h3>AMA Session By Mentor Of The Month Tanmay Khare</h3></a>
+                                <a href="#" id="orange_links"><h3>AMA Session By Mentor Of The Month Tanmay Khare</h3></a>
                                 <p>Have a query pertaining to MS in US that no one solved for you? Get it resolved on Yocket discussion by Mentor of the month Tanmay Khare. Post your questions on Yocket Discussion by tagging @Tanmya...</p>
                             </div>
                           </div>
@@ -280,7 +280,7 @@
             </div>
             <div class="row my-5">
                 <div class="col">
-                    <a href="" style="font-size: 18px">See Past Events</a>
+                    <a href="#" id="orange_links" style="font-size: 18px">See Past Events</a>
                 </div>
             </div>
         </div>
