--- a/university_deadlines.html
+++ b/university_deadlines.html
@@ -134,86 +134,86 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>
                     <tr>
-                      <td><a href="#">University of Toronto</a></td>
-                      <td><a href="#">Finance</a></td>
+                      <td><a href="#" id="orange_links">University of Toronto</a></td>
+                      <td><a href="#" id="orange_links">Finance</a></td>
                       <td>Fall 2018</td>
                       <td>12 June, 2018</td>
                     </tr>  
@@ -225,18 +225,18 @@
                     <nav aria-label="Page navigation example">
                       <ul class="pagination">
                         <li class="page-item">
-                          <a class="page-link" href="#" aria-label="Previous">
+                          <a class="page-link" href="#" aria-label="Previous" id="orange_links">
                             <span aria-hidden="true">&laquo;</span>
                             <span class="sr-only">Previous</span>
                           </a>
                         </li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#">4</a></li>
-                        <li class="page-item"><a class="page-link" href="#">5</a></li>  
+                        <li class="page-item active"><a class="page-link" href="#" id="orange_links">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#" id="orange_links">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#" id="orange_links">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#" id="orange_links">4</a></li>
+                        <li class="page-item"><a class="page-link" href="#" id="orange_links">5</a></li>  
                         <li class="page-item">
-                          <a class="page-link" href="#" aria-label="Next">
+                          <a class="page-link" href="#" id="orange_links" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                             <span class="sr-only">Next</span>
                           </a>
