--- a/university_reviews.html
+++ b/university_reviews.html
@@ -107,9 +107,9 @@
                                 <small><strong>Filter Universities</strong></small>
                                 <p class="m-1">RANK</p>
                                 <ul>
-                                    <li><a href="#">Top 25</a></li>
-                                    <li><a href="#">Top 50</a></li>
-                                    <li><a href="#">Top 100</a></li>
+                                    <li><a href="#" id="orange_links">Top 25</a></li>
+                                    <li><a href="#" id="orange_links">Top 50</a></li>
+                                    <li><a href="#" id="orange_links">Top 100</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -119,8 +119,8 @@
                             <div class="col">
                                 <p class="m-1">TYPE</p>
                                 <ul>
-                                    <li><a href="#">Private</a></li>
-                                    <li><a href="#">Public</a></li>
+                                    <li><a href="#" id="orange_links">Private</a></li>
+                                    <li><a href="#" id="orange_links">Public</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -130,17 +130,17 @@
                             <div class="col">
                                 <p class="m-1">Country</p>
                                     <ul>
-                                    <li><a href="#">Germany</a></li>
-                                    <li><a href="#">Canada</a></li>
-                                    <li><a href="#">Australia</a></li>
-                                    <li><a href="#">Japan</a></li>
-                                    <li><a href="#">United Kingdom</a></li>
-                                    <li><a href="#">Ireland</a></li>
-                                    <li><a href="#">Switzerland</a></li>
-                                    <li><a href="#">Sweden</a></li>
-                                    <li><a href="#">New Zealand</a></li>
-                                    <li><a href="#">Singapore</a></li>
-                                    <li><a href="#">France</a></li>    
+                                    <li><a href="#" id="orange_links">Germany</a></li>
+                                    <li><a href="#" id="orange_links">Canada</a></li>
+                                    <li><a href="#" id="orange_links">Australia</a></li>
+                                    <li><a href="#" id="orange_links">Japan</a></li>
+                                    <li><a href="#" id="orange_links">United Kingdom</a></li>
+                                    <li><a href="#" id="orange_links">Ireland</a></li>
+                                    <li><a href="#" id="orange_links">Switzerland</a></li>
+                                    <li><a href="#" id="orange_links">Sweden</a></li>
+                                    <li><a href="#" id="orange_links">New Zealand</a></li>
+                                    <li><a href="#" id="orange_links">Singapore</a></li>
+                                    <li><a href="#" id="orange_links">France</a></li>    
                                 </ul>
                             </div>
                         </div>
@@ -187,7 +187,7 @@
                                 <img src="https://computing.artsci.wustl.edu/files/computing/imce/resize-image-example.jpg" alt="..." class="img-thumbnail">
                             </div>
                             <div class="col-6">
-                                <a href="#"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
+                             <a href='#' id="orange_links"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
                                 <p class="text-muted small">Arizona, United States</p>
                                 <br>
                                 <p><small>Public University<br>
@@ -206,7 +206,7 @@
                                 <img src="https://computing.artsci.wustl.edu/files/computing/imce/resize-image-example.jpg" alt="..." class="img-thumbnail">
                             </div>
                             <div class="col-6">
-                                <a href="#"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
+                             <a href='#' id="orange_links"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
                                 <p class="text-muted small">Arizona, United States</p>
                                 <br>
                                 <p><small>Public University<br>
@@ -225,7 +225,7 @@
                                 <img src="https://computing.artsci.wustl.edu/files/computing/imce/resize-image-example.jpg" alt="..." class="img-thumbnail">
                             </div>
                             <div class="col-6">
-                                <a href="#"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
+                             <a href='#' id="orange_links"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
                                 <p class="text-muted small">Arizona, United States</p>
                                 <br>
                                 <p><small>Public University<br>
@@ -244,7 +244,7 @@
                                 <img src="https://computing.artsci.wustl.edu/files/computing/imce/resize-image-example.jpg" alt="..." class="img-thumbnail">
                             </div>
                             <div class="col-6">
-                                <a href="#"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
+                             <a href='#' id="orange_links"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
                                 <p class="text-muted small">Arizona, United States</p>
                                 <br>
                                 <p><small>Public University<br>
@@ -263,7 +263,7 @@
                                 <img src="https://computing.artsci.wustl.edu/files/computing/imce/resize-image-example.jpg" alt="..." class="img-thumbnail">
                             </div>
                             <div class="col-6">
-                                <a href="#"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
+                             <a href='#' id="orange_links"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
                                 <p class="text-muted small">Arizona, United States</p>
                                 <br>
                                 <p><small>Public University<br>
@@ -282,7 +282,7 @@
                                 <img src="https://computing.artsci.wustl.edu/files/computing/imce/resize-image-example.jpg" alt="..." class="img-thumbnail">
                             </div>
                             <div class="col-6">
-                                <a href="#"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
+                             <a href='#' id="orange_links"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
                                 <p class="text-muted small">Arizona, United States</p>
                                 <br>
                                 <p><small>Public University<br>
@@ -301,7 +301,7 @@
                                 <img src="https://computing.artsci.wustl.edu/files/computing/imce/resize-image-example.jpg" alt="..." class="img-thumbnail">
                             </div>
                             <div class="col-6">
-                                <a href="#"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
+                             <a href='#' id="orange_links"><p class="h5" style="margin-bottom: 0px">Arizona State University (ASU)</p></a>
                                 <p class="text-muted small">Arizona, United States</p>
                                 <br>
                                 <p><small>Public University<br>
@@ -320,7 +320,7 @@
                                 <nav aria-label="Page navigation example">
                                   <ul class="pagination">
                                     <li class="page-item">
-                                      <a class="page-link" href="#" aria-label="Previous">
+                                      <a class="page-link" href="#" aria-label="Previous" id="orange_links">
                                         <span aria-hidden="true">&laquo;</span>
                                         <span class="sr-only">Previous</span>
                                       </a>
@@ -328,12 +328,12 @@
                                     <li class="page-item active">
                                       <a class="page-link" href="#">1<span class="sr-only">(current)</span></a>
                                     </li>
-                                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">4</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">5</a></li>  
+                                    <li class="page-item"><a class="page-link" href="#" id="orange_links">2</a></li>
+                                    <li class="page-item"><a class="page-link" href="#" id="orange_links">3</a></li>
+                                    <li class="page-item"><a class="page-link" href="#" id="orange_links">4</a></li>
+                                    <li class="page-item"><a class="page-link" href="#" id="orange_links">5</a></li>  
                                     <li class="page-item">
-                                      <a class="page-link" href="#" aria-label="Next">
+                                      <a class="page-link" href="#" id="orange_links" aria-label="Next">
                                         <span aria-hidden="true">&raquo;</span>
                                         <span class="sr-only">Next</span>
                                       </a>
