find_roomate.html

--- a/find_profiles.html
+++ b/find_profiles.html
@@ -71,9 +71,9 @@
 	    		<button class="btn btn-sm btn-outline-secondary bg-white border-white" type="button">Sign up</button>
 	  		</div>
 		</nav>
-        <div class="container border border-primary">
+        <div class="container">
             <div class="row">
-                <div class="col-9 border border-primary">
+                <div class="col-9">
                     <h1 class="my-3">Find people with specific profiles</h1>
                     <div class="mb-3" style="border: 0.02em solid gainsboro">
                     </div>
