--- a/room_finder.html
+++ b/room_finder.html
@@ -71,6 +71,110 @@
 	    		<button class="btn btn-sm btn-outline-secondary bg-white border-white" type="button">Sign up</button>
 	  		</div>
 		</nav>
+        <div class="container">
+            <div class="row">
+                <div class="col-9">
+                    <h1 class="my-3">Find roomates</h1>
+                    <div class="mb-3" style="border: 0.02em solid gainsboro">
+                    </div>
+                    <p>Connect with people who have decided on the same university as you and find roommates</p>
+                    <div class="alert alert-primary" role="alert">
+                    This feature is currently available only on STUDY ABROAD APP mobile app.
+                    </div>                
+                    <div class="row mt-3 mb-5 justify-content-center">
+                        <div class="col-2">
+                           <a href="#"><img href="" alt="Play Store"/></a>
+                        </div>
+                        <div class="col-2">
+                           <a href="#"><img href="" alt="Apple Store"/></a>    
+                        </div>
+                    </div>
+                </div>
+            </div>            
+        </div>
+        <footer class="container-fluid mt-5" id="fgrey">
+                <div class="row pt-3 justify-content-center">
+                    <div class="col">
+                        <div class="float-right">
+                            Looking for help?
+                        </div>	
+                    </div>
+                    <div class="col pl-0">
+                        <button type="button" class="btn btn-sm rounded btn-primary">CONTACT US</button>
+                    </div>	
+                </div>
+                <div class="container">
+                    <div class="row m-3">
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>UNIVERSITY INFORMATION</strong>
+                                <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+                                <ul class="card-text list-unstyled">
+                                    <li>University Reviews</li>
+                                    <li>Profile evaluator</li>
+                                    <li>Compare universities</li>
+                                    <li>Application Deadlines</li>
+                                    <li>Course Descriptions</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>EXPLORE YOCKET</strong>
+                                <ul class="card-text list-unstyled">
+                                    <li>Similar profiles</li>
+                                    <li>Admits and rejects</li>
+                                    <li>Roommate finder</li>
+                                    <li>Discussions</li>
+                                    <li>Read Articles</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>SERVICES</strong>
+                                <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+                                <ul class="card-text list-unstyled">
+                                    <li>Send transcripts</li>
+                                    <li>Education Loans</li>
+                                    <li>Forex Card</li>
+                                    <li>University fee payment</li>
+                                    <li>Health/Travel Insurance</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="card h-100" id="fcard">
+                              <div class="card-body text-center">
+                                <strong>MORE</strong>
+                                <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+                                <ul class="card-text list-unstyled">
+                                    <li>Contact us | Work with us</li>
+                                    <li>Facebook | Twitter</li>
+                                    <li>About Us</li>
+                                    <li>Campus Ambassador</li>
+                                    <li>Privacy | Terms</li>
+                                </ul>
+                              </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto pb-4">
+                        <select class="form-control form-control-sm">
+                          <option>Select language</option>
+                        </select>
+                        <small>Powered by Google <strong>Translate</strong></small>
+                    </div>	
+                </div>	
+        </footer>            
         <script src="js/jquery-3.3.1.slim.min.js" ></script>
 	    <script src="js/popper.min.js" ></script>
 	    <script src="js/bootstrap.js" ></script>    
