--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 			YOCKET SERVICES
 		</div>
 	</div>	
-	<div class="row m-3 mb-5 border border-primary" >
+	<div class="row m-3 mb-5" >
 		<div class="col-3">
 			<div class="card">
 			  <div class="card-body">
